profilelist1exp/unpackaged/objects/SFDC_Acct_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Marketing_NPS_Initiatives__c</fullName>
        <inlineHelpText>Comments on any marketing show attendance and EBC visits you plan on engaging with your customer this planning year.
Comments on NPS initiatives you plan on driving with your customer (i.e. increase NPS survey participation and better scores)</inlineHelpText>
        <label>NPS Initiatives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mission_Statement__c</fullName>
        <inlineHelpText>Customer&apos;s mission or vision statement</inlineHelpText>
        <label>Mission Statement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Networking_Strategy__c</fullName>
        <label>Networking</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Networking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Networking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Actions__c</fullName>
        <formula>IF( 
	AND (
		ISPICKVAL(Plan_Status__c, &apos;Submitted for Approval&apos;), 
		OR(Sales_Manager__c = $User.Id,Manager__c= $User.Id,AP_Lite_Manager__c = $User.Id)
	),
	HYPERLINK(&quot;/apex/AccountPlanUpdateStatus?Id=&quot; &amp; Id, IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000002iugy&quot;, &apos;Approve&apos;), &apos;_parent&apos;) &amp; &apos; &apos; &amp;
	HYPERLINK(&quot;/apex/AccountPlanRejection?Id=&quot; &amp; Id, IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000002iugz&quot;, &apos;Reject&apos;), &apos;_parent&apos;), 
	IF(
		ISPICKVAL(Plan_Status__c , &apos;Pending&apos;),  
		HYPERLINK(&quot;/apex/AccountPlanUpdateStatus?Id=&quot; &amp; Id, IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000001dB7J&quot;, &apos;Submit for Approval&apos;), &apos;_parent&apos;),  
		IF(
			ISPICKVAL(Plan_Status__c , &apos;Rejected&apos;),
			HYPERLINK(&quot;/apex/AccountPlanUpdateStatus?Id=&quot; &amp; Id, IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000002iuh0&quot;, &apos;Resubmit for Approval&apos;), &apos;_parent&apos;),  
			&apos;[No Approval Option Available]&apos;
		)
	)
)</formula>
        <inlineHelpText>When Status = Pending, a Submit for Approval button will appear only for the Account Executive of the Account Plan.
When Status = Submitted for Approval, a Review and Approve button will appear only for the Sales Manager/RSM of the Account Plan</inlineHelpText>
        <label>Next Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Strategies_Current_Next_FY_Formula__c</fullName>
        <formula>No_of_Strategies_by_Current_Next_FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Strategies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Strategies__c</fullName>
        <label>No of Strategies Old</label>
        <summaryForeignKey>SFDC_Strategy__c.SFDC_Acct_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Strategies_by_Current_Next_FY__c</fullName>
        <label>Count Strategies for Formula</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obsolete_Record_Type__c</fullName>
        <label>Obsolete Record Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ongoing_Projects_1__c</fullName>
        <label>Ongoing Projects 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ongoing_Projects_2__c</fullName>
        <label>Ongoing Projects 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ongoing_Projects_3__c</fullName>
        <label>Ongoing Projects 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label>Opportunities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Goals__c</fullName>
        <inlineHelpText>Describe the specific goal for this area</inlineHelpText>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Customer_Long_Term_Goals__c</fullName>
        <inlineHelpText>Detail your understanding of your Customers business goals for the next 13 months +</inlineHelpText>
        <label>Customer Business Goals (13 - 36 Months)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Customer_Short_Term_Goals__c</fullName>
        <inlineHelpText>Detail your understanding of your Customers business goals for 0 - 12 months</inlineHelpText>
        <label>Customer Business Goals (0 - 12 Months)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Partner Development Manager</inlineHelpText>
        <label>PDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Manager_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account Manager 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plansn30M</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account Manager 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plansn30v</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Certification__c</fullName>
        <label>Partner Certification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Industry_Challenges__c</fullName>
        <label>Partner &amp; Industry Challenges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Inhouse_Financial_Services__c</fullName>
        <label>Partner Inhouse Financial Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Relationship__c</fullName>
        <formula>Account__r.Partner_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Selling_Power_Total__c</fullName>
        <inlineHelpText>The total estimated selling power of IT products</inlineHelpText>
        <label>Partner Selling Power (Total)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Sign_off_Date__c</fullName>
        <label>Partner Sign off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Sign_off__c</fullName>
        <label>Partner Sign off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Add the most important contact for the planning</inlineHelpText>
        <label>Partner Sponsor</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plans (Partner Sponsor)</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <label>Partner Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Premier plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <formula>Account__r.Partner_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This information is populated from the Account Page</inlineHelpText>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnership_Executive_Summary__c</fullName>
        <inlineHelpText>Write a summary re the partnership that would initially be valuable for a senior exec at the partner or Dell – like a 30 sec pitch</inlineHelpText>
        <label>Partnership Executive Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pivotal_Rep_and_Email__c</fullName>
        <label>Pivotal Rep and Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal__c</fullName>
        <label>Pivotal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Starting_Fiscal_Year__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <inlineHelpText>Dell&apos;s fiscal year (February - January)</inlineHelpText>
        <label>Planning Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY17</fullName>
                </value>
                <value>
                    <fullName>FY18</fullName>
                </value>
                <value>
                    <fullName>FY19</fullName>
                </value>
                <value>
                    <fullName>FY20</fullName>
                </value>
                <value>
                    <fullName>FY21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Starting_Quarter__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <label>Plan Starting Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Waiting for Strategies</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Reviewed and Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possible_Future_Projects_1__c</fullName>
        <label>Possible Future Projects 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Future_Projects_2__c</fullName>
        <label>Possible Future Projects 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Future_Projects_3__c</fullName>
        <label>Possible Future Projects 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Revenue_1__c</fullName>
        <label>Potential Revenue 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Revenue_2__c</fullName>
        <label>Potential Revenue 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Revenue_3__c</fullName>
        <label>Potential Revenue 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Power_Sponsor_Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Power Sponsor / Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Acct_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_NPS_Results__c</fullName>
        <formula>Account__r.Previous_NPS_Results__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous NPS Results</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAD_Code__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning.This information is populated from the Account page which in turn gets data populated from Affinity||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <formula>Account__r.RAD_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This information is populated from the Account Page</inlineHelpText>
        <label>RAD Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSA_Rep_and_Email__c</fullName>
        <label>RSA Rep and Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSA__c</fullName>
        <label>RSA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Review_Feedback_Last_Modified__c</fullName>
        <label>RSD Review Feedback Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RSD_Review_Feedback__c</fullName>
        <label>RSD Review Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Rejection__c</fullName>
        <description>Reason of rejection for Account Plan.</description>
        <inlineHelpText>Reach out and coach the Account Plan creator on the area within the Account Plan needing improvement</inlineHelpText>
        <label>Reason for Rejection</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Plan, sales manager&apos;s name.</description>
        <label>Rejected by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans_Rejected_by_SM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risks_Mitigation_Incl_NPS__c</fullName>
        <inlineHelpText>Describe any issues identified and how we would solve them, could for example originate from NPS</inlineHelpText>
        <label>Risks &amp; Mitigation (Incl NPS)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risks_and_Mitigation__c</fullName>
        <inlineHelpText>Please indicate current customer risks and customer mitigation responses to date</inlineHelpText>
        <label>Risks &amp; Mitigation incl. NPS Initiatives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The RSD/RSM is the person responsible for approving the Account Plan</inlineHelpText>
        <label>RSD/RSM</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The current user in the “RSD/RSM” field is now an Inactive User, please update.</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Issues__c</fullName>
        <inlineHelpText>Do we have any High Level Customer Satisfaction Issues to focus on or be aware of during this Planning Year. ie. Possible issues that occurred during last Planning Year</inlineHelpText>
        <label>Satisfaction Issues</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SecureWorks__c</fullName>
        <label>SecureWorks</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secureworks_Rep_and_Email__c</fullName>
        <label>Secureworks Rep and Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Account_Sales_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SOM R15.10 - Value is populate when user with title &quot;SVC_ASE&quot; is add into Account Team</description>
        <label>Services Account Sales Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Apps_Margin__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10009.</description>
        <inlineHelpText>Represents Services Applications margin % for the last 4 fiscal quarters.</inlineHelpText>
        <label>Services Apps Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services_Apps_Revenue__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10009</description>
        <inlineHelpText>Represents last 4 quarters of Services Applications revenue.</inlineHelpText>
        <label>Services Apps Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_BPO_Margin__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10009.</description>
        <inlineHelpText>Represents Services Business Process Outsourcing margin % for the last 4 fiscal quarters.</inlineHelpText>
        <label>Services BPO Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services_BPO_Revenue__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10009</description>
        <inlineHelpText>Represents last 4 quarters of Services Business Process Outsourcing revenue.</inlineHelpText>
        <label>Services BPO Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Capabilities__c</fullName>
        <inlineHelpText>Describe the specific goal for this area</inlineHelpText>
        <label>Services Capabilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Services_Contract_Start_Date__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10005</description>
        <inlineHelpText>Represents the date the current Services contract began.</inlineHelpText>
        <label>Services Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Contract_Term__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10005</description>
        <inlineHelpText>Represents length of the current services contract in months. Example: enter &apos;6&apos; for a 6 month contract term.</inlineHelpText>
        <label>Services Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Customer_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SOM R15.10 - Value is populate when user with title &quot;SVC_CE&quot; is add into Account Team</description>
        <label>Services Customer Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Engagement_Model__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10005</description>
        <inlineHelpText>Enter the type of engagement model (staff augmentation, project based outsourcing, co-sourcing, managed services, etc.). If it is a mix, mention all the models in use.</inlineHelpText>
        <label>Services Engagement Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Services_I_CC_Margin__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10009.</description>
        <inlineHelpText>Represents Services Infrastructure, Cloud, and Consulting margin % for the last 4 fiscal quarters.</inlineHelpText>
        <label>Services I&amp;CC Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services_I_CC_Revenue__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10009</description>
        <inlineHelpText>Represents last 4 quarters of Services Infrastructure, Cloud, and Consulting revenue.</inlineHelpText>
        <label>Services I&amp;CC Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Total_Margin__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10009.</description>
        <inlineHelpText>Represents Services margin % for the last 4 fiscal quarters.</inlineHelpText>
        <label>Services Total Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services_Total_Revenue__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10009.</description>
        <inlineHelpText>Represents last 4 quarters of Services revenue.</inlineHelpText>
        <label>Services Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet__c</fullName>
        <formula>Last_FY_Full_Year__c / Partner_Selling_Power_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated Based on SP and Last FY revenue</inlineHelpText>
        <label>Share of Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet_with_Dell__c</fullName>
        <formula>IF(Account_Annual_IT_Spend__c = 0, 0, Anticipated_IT_Spend_with_Dell__c / Account_Annual_IT_Spend__c)</formula>
        <inlineHelpText>Autocalculated based on the Annual IT spend and the IT spend with Dell.</inlineHelpText>
        <label>Share of Wallet with Dell (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Size_Employees__c</fullName>
        <label>Size (Employees)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 50</fullName>
                </value>
                <value>
                    <fullName>50 - 100</fullName>
                </value>
                <value>
                    <fullName>100 - 500</fullName>
                </value>
                <value>
                    <fullName>500 - 1000</fullName>
                </value>
                <value>
                    <fullName>1000 +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <inlineHelpText>Customer&apos;s sponsor supporting this account plan</inlineHelpText>
        <label>Customer Sponsor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plans (Sponsor / Champion)</relationshipLabel>
        <relationshipName>Acct_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Plan_Status__c)</formula>
        <inlineHelpText>Account plan approval process status</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_Partner__c</fullName>
        <label>Status of Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Premier plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Strategy__c</fullName>
        <label>Storage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Storage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_Partner_1__c</fullName>
        <label>Strategic Partner 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Partner_2__c</fullName>
        <label>Strategic Partner 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_PlansoJhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TSP__c</fullName>
        <inlineHelpText>Partner Total Selling Power (includes Notebook, Desktop, Server, Storage, Networking and Imaging) for actual calendar year</inlineHelpText>
        <label>TSP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_PlansoJiM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>This_FY_CS__c</fullName>
        <label>This FY Rev - CS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>This_FY_DSG__c</fullName>
        <label>This FY Rev - DSG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>This_FY_ESG__c</fullName>
        <label>This FY Rev - ESG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>This_FY_Financed__c</fullName>
        <label>This FY Rev - Financed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>This_FY_Full_Year__c</fullName>
        <label>This FY Rev - Full Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>This_FY_Q1__c</fullName>
        <label>This FY Rev - Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>This_FY_Q2__c</fullName>
        <label>This FY Rev - Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>This_FY_Q3__c</fullName>
        <label>This FY Rev - Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>This_FY_Services__c</fullName>
        <label>This FY Rev - Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Threat__c</fullName>
        <label>Threat</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_1st_Half_Strategies__c</fullName>
        <label>Total Value of 1st Half Strategies</label>
        <summarizedField>SFDC_Strategy__c.Potential_Strategy_Value__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Strategy__c.When_do_you_plan_to_realize_Strategy__c</field>
            <operation>equals</operation>
            <value>1st Q (This FY), 2nd Q (This FY)</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Strategy__c.SFDC_Acct_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_2nd_Half_Strategies__c</fullName>
        <label>Total Value of 2nd Half Strategies</label>
        <summarizedField>SFDC_Strategy__c.Potential_Strategy_Value__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Strategy__c.When_do_you_plan_to_realize_Strategy__c</field>
            <operation>equals</operation>
            <value>3rd Q (This FY), 4th Q (This FY)</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Strategy__c.SFDC_Acct_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_Strategies__c</fullName>
        <formula>Calculated_Annual_Value_of_Strategies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value of Strategies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>